--- a/bonus_graphic/index.html
+++ b/bonus_graphic/index.html
@@ -7,49 +7,15 @@
     <title>Document</title>
     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="container h-100">
-            <div class="row align-items-center h-100">
-                <div class="col-6 d-flex">
-                    <img class="img-fluid" src="img/logo.png" alt="logo img">
-                    <h1 class="ps-4">Campo minato</h1>
-                </div>
-                <div class="col-6">
-                    <div class="input-group">
-                        <select class="form-select" id="inputGroupSelect02">
-                          <option selected>Choose difficulty level</option>
-                          <option value="1">Easy</option>
-                          <option value="2">Medium</option>
-                          <option value="3">Hard</option>
-                        </select>
-                        <label class="input-group-text" for="inputGroupSelect02">Play</label>
-                      </div>
-                </div>
-            </div>
-        </div>
-    </header>
-    <main>
-
-    </main>
-    <footer>
-        <div class="container h-100">
-            <div class="row h-100 align-items-center text-center">
-                <div class="col-12">
-                    <span>Made with &hearts; by Giuseppe Vetrano</span>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <div class="container">
+        
+    </div>
     <!-- javascript
     <script src="js/script.js"></script> -->
 </body>
